# Testing_GPU

./: .gitignore  README.md  data.json  pyproject.toml  show_results.ipynb  todo.txt
results/: data_2025-01-23_23-19-40.json  data_2025-01-23_23-36-12.json  data_2025-01-23_23-51-08.json  data_2025-01-29_21-53-03.json  data_2025-01-29_21-54-42.json  data_2025-01-29_21-55-32.json  data_2025-01-29_21-55-43.json  data_2025-01-29_21-56-00.json  data_2025-01-29_21-58-44.json  data_2025-01-29_22-01-05.json  data_2025-01-29_22-04-47.json  data_2025-01-29_22-08-53.json  data_2025-01-29_22-12-52.json  data_2025-01-29_22-15-16.json  data_2025-01-29_22-17-17.json  data_2025-01-29_22-20-40.json  data_2025-01-29_22-24-28.json  data_2025-01-29_22-24-40.json  data_2025-01-29_22-24-50.json  data_2025-01-29_22-25-03.json  data_2025-01-29_22-25-21.json  data_2025-01-29_22-39-54.json  data_2025-01-29_22-40-27.json  data_2025-01-29_22-40-36.json  data_2025-01-29_22-41-50.json  data_2025-01-29_22-43-41.json  data_2025-01-29_22-46-54.json  data_2025-01-29_22-49-50.json  data_2025-01-29_22-51-23.json  data_2025-01-29_22-52-20.json  data_2025-01-29_22-53-42.json  data_2025-01-29_22-57-27.json  data_2025-01-29_22-58-23.json  data_2025-01-29_22-58-35.json  data_2025-01-29_22-58-47.json  data_2025-01-29_22-59-04.json  data_2025-01-29_22-59-41.json  data_2025-01-29_23-10-18.json  data_2025-01-29_23-10-46.json  data_2025-01-29_23-10-56.json  (+25 more)
src/: bot.py  config ai-edu cluster.py  config aiedu.py  config.py  test.py  tftt_test.py
